--- a/pkg/dyninst/testdata/decoded/sample.yaml
+++ b/pkg/dyninst/testdata/decoded/sample.yaml
@@ -2,7 +2,7 @@ stackC:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"stackC"}}'
   ExpectedToFail: true
 testArrayOfArrays:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testArrayOfArrays","a":[[1,2],[3,4]]}}'
+  OutputJSON: '{"stack_frames":"","captures":{"a":[[1,2],[3,4]],"probe_id":"testArrayOfArrays"}}'
   ExpectedToFail: false
 testArrayOfArraysOfArrays:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testArrayOfArraysOfArrays","b":[[[1,2],[3,4]],[[5,6],[7,8]]]}}'
@@ -26,16 +26,16 @@ testChannel:
   OutputJSON: ""
   ExpectedToFail: true
 testCombinedByte:
-  OutputJSON: '{"stack_frames":"","captures":{"x":3,"y":0,"probe_id":"testCombinedByte","w":2}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testCombinedByte","w":2,"x":3,"y":0}}'
   ExpectedToFail: false
 testEmptySlice:
-  OutputJSON: '{"captures":{"probe_id":"testEmptySlice","u":[]},"stack_frames":""}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testEmptySlice","u":[]}}'
   ExpectedToFail: false
 testEmptySliceOfStructs:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testEmptySliceOfStructs","xs":[],"a":2}}'
   ExpectedToFail: false
 testEmptyStruct:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testEmptyStruct","e":{}}}'
+  OutputJSON: '{"captures":{"e":{},"probe_id":"testEmptyStruct"},"stack_frames":""}'
   ExpectedToFail: false
 testError:
   OutputJSON: ""
@@ -44,13 +44,13 @@ testInt8Array:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testInt8Array","x":[1,2]}}'
   ExpectedToFail: false
 testInt16Array:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testInt16Array","x":[1,2]}}'
+  OutputJSON: '{"captures":{"probe_id":"testInt16Array","x":[1,2]},"stack_frames":""}'
   ExpectedToFail: false
 testInt32Array:
-  OutputJSON: '{"stack_frames":"","captures":{"x":[1,2],"probe_id":"testInt32Array"}}'
+  OutputJSON: '{"captures":{"probe_id":"testInt32Array","x":[1,2]},"stack_frames":""}'
   ExpectedToFail: false
 testInt64Array:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testInt64Array","x":[1,2]}}'
+  OutputJSON: '{"captures":{"probe_id":"testInt64Array","x":[1,2]},"stack_frames":""}'
   ExpectedToFail: false
 testIntArray:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testIntArray","x":[1,2]}}'
@@ -65,34 +65,34 @@ testMapStringToInt:
   OutputJSON: '{"stack_frames":""}'
   ExpectedToFail: true
 testMultipleSimpleParams:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testMultipleSimpleParams","a":false,"b":42,"c":122,"d":1337,"e":"xyz"}}'
+  OutputJSON: '{"stack_frames":"","captures":{"c":122,"d":1337,"e":"xyz","probe_id":"testMultipleSimpleParams","a":false,"b":42}}'
   ExpectedToFail: false
 testNilPointer:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testNilPointer","z":"nil","a":1}}'
   ExpectedToFail: false
 testNilSlice:
-  OutputJSON: '{"stack_frames":"","captures":{"xs":[],"probe_id":"testNilSlice"}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testNilSlice","xs":[]}}'
   ExpectedToFail: false
 testNilSliceOfStructs:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testNilSliceOfStructs","xs":[],"a":5}}'
+  OutputJSON: '{"captures":{"probe_id":"testNilSliceOfStructs","xs":[],"a":5},"stack_frames":""}'
   ExpectedToFail: false
 testNilSliceWithOtherParams:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testNilSliceWithOtherParams","a":1,"s":[],"x":5}}'
   ExpectedToFail: false
 testOneStringInStructPointer:
-  OutputJSON: '{"stack_frames":"","captures":{"a":{"Address":"","Value":{"a":"omg"}},"probe_id":"testOneStringInStructPointer"}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testOneStringInStructPointer","a":{"Address":"","Value":{"a":"omg"}}}}'
   ExpectedToFail: false
 testPointerLoop:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testPointerLoop","a":{"Value":{"val":1,"b":{"Address":""}},"Address":""}}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testPointerLoop","a":{"Value":{"b":{"Address":""},"val":1},"Address":""}}}'
   ExpectedToFail: false
 testRuneArray:
-  OutputJSON: '{"captures":{"probe_id":"testRuneArray","x":[1,2]},"stack_frames":""}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testRuneArray","x":[1,2]}}'
   ExpectedToFail: false
 testSingleBool:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleBool","x":true}}'
   ExpectedToFail: false
 testSingleByte:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleByte","x":97}}'
+  OutputJSON: '{"captures":{"probe_id":"testSingleByte","x":97},"stack_frames":""}'
   ExpectedToFail: false
 testSingleFloat32:
   OutputJSON: '{"captures":{"probe_id":"testSingleFloat32","x":0},"stack_frames":""}'
@@ -101,13 +101,13 @@ testSingleFloat64:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleFloat64","x":0}}'
   ExpectedToFail: false
 testSingleInt:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleInt","x":-1512}}'
+  OutputJSON: '{"captures":{"x":-1512,"probe_id":"testSingleInt"},"stack_frames":""}'
   ExpectedToFail: false
 testSingleInt8:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleInt8","x":-8}}'
   ExpectedToFail: false
 testSingleInt16:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleInt16","x":-16}}'
+  OutputJSON: '{"stack_frames":"","captures":{"x":-16,"probe_id":"testSingleInt16"}}'
   ExpectedToFail: false
 testSingleInt32:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleInt32","x":-32}}'
@@ -116,16 +116,16 @@ testSingleInt64:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleInt64","x":-64}}'
   ExpectedToFail: false
 testSingleRune:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleRune","x":1}}'
+  OutputJSON: '{"stack_frames":"","captures":{"x":1,"probe_id":"testSingleRune"}}'
   ExpectedToFail: false
 testSingleString:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleString","x":"abc"}}'
   ExpectedToFail: false
 testSingleUint:
-  OutputJSON: '{"captures":{"probe_id":"testSingleUint","x":1512},"stack_frames":""}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleUint","x":1512}}'
   ExpectedToFail: false
 testSingleUint8:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleUint8","x":8}}'
+  OutputJSON: '{"captures":{"probe_id":"testSingleUint8","x":8},"stack_frames":""}'
   ExpectedToFail: false
 testSingleUint16:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testSingleUint16","x":16}}'
@@ -149,13 +149,13 @@ testStringSlice:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testStringSlice","s":["abc","xyz","123"]}}'
   ExpectedToFail: false
 testStruct:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testStruct","x":{"aBool":true,"aString":"one","aNumber":2,"nested":{"anotherInt":3,"anotherString":"four"}}}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testStruct","x":{"aNumber":2,"nested":{"anotherInt":3,"anotherString":"four"},"aBool":true,"aString":"one"}}}'
   ExpectedToFail: false
 testStructSlice:
-  OutputJSON: '{"captures":{"probe_id":"testStructSlice","xs":[{"aUint8":42,"aBool":true},{"aUint8":24,"aBool":true}],"a":3},"stack_frames":""}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testStructSlice","xs":[{"aUint8":42,"aBool":true},{"aUint8":24,"aBool":true}],"a":3}}'
   ExpectedToFail: false
 testThreeStrings:
-  OutputJSON: '{"stack_frames":"","captures":{"z":"ghi","probe_id":"testThreeStrings","x":"abc","y":"def"}}'
+  OutputJSON: '{"stack_frames":"","captures":{"x":"abc","y":"def","z":"ghi","probe_id":"testThreeStrings"}}'
   ExpectedToFail: false
 testThreeStringsInStruct:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testThreeStringsInStruct","a":{"a":"abc","b":"def","c":"ghi"}}}'
@@ -167,7 +167,7 @@ testTypeAlias:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testTypeAlias","x":3}}'
   ExpectedToFail: false
 testUint8Array:
-  OutputJSON: '{"stack_frames":"","captures":{"x":[1,2],"probe_id":"testUint8Array"}}'
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testUint8Array","x":[1,2]}}'
   ExpectedToFail: false
 testUint16Array:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testUint16Array","x":[1,2]}}'
@@ -179,7 +179,7 @@ testUint64Array:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testUint64Array","x":[1,2]}}'
   ExpectedToFail: false
 testUintArray:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testUintArray","x":[1,2]}}'
+  OutputJSON: '{"stack_frames":"","captures":{"x":[1,2],"probe_id":"testUintArray"}}'
   ExpectedToFail: false
 testUintPointer:
   OutputJSON: '{"stack_frames":"","captures":{"probe_id":"testUintPointer","x":{"Address":"","Value":1}}}'
