--- a/pkg/dyninst/testdata/decoded/simple.yaml
+++ b/pkg/dyninst/testdata/decoded/simple.yaml
@@ -1,30 +1,34 @@
-a:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"a","x":81985529216486900}}'
+inlined:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"inlined","x":0}}'
   ExpectedToFail: false
-b:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"b","s":"d"}}'
+intArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"intArg","x":81985529216486900}}'
   ExpectedToFail: false
-c:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"c","s":[1,2,3]}}'
+intArrayArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"intArrayArg","s":[1,2,3]}}'
   ExpectedToFail: false
-d:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"d","s":[1,2,3]}}'
+intArrayArgFrameless:
+  OutputJSON: '{"captures":{"probe_id":"intArrayArgFrameless","s":["foo","bar","baz"]},"stack_frames":""}'
   ExpectedToFail: false
-e:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"e","s":["a","b","c"]}}'
+intSliceArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"intSliceArg","s":[1,2,3]}}'
   ExpectedToFail: false
-f:
-  OutputJSON: '{"stack_frames":"","captures":{"s":["a","b","c"],"probe_id":"f"}}'
+stringArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"stringArg","s":"d"}}'
   ExpectedToFail: false
-g:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"g","x":0}}'
+stringArrayArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"stringArrayArg","s":["a","b","c"]}}'
   ExpectedToFail: false
-h:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"h","m":{"a":1}}}'
+stringSliceArg:
+  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"stringSliceArg","s":["a","b","c"]}}'
+  ExpectedToFail: false
+mapArg:
+  OutputJSON: ''
   ExpectedToFail: true
-i:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"i","m":{"b":2}}}'
+bigMapArg:
+  OutputJSON: ''
   ExpectedToFail: true
-j:
-  OutputJSON: '{"stack_frames":"","captures":{"probe_id":"j","m":{"c":3}}}'
+PointerChainArg:
+  OutputJSON: ''
   ExpectedToFail: true
+
