--- a/pkg/dyninst/irgen/testdata/snapshot/simple.arch=amd64,toolchain=go1.24.3.yaml
+++ b/pkg/dyninst/irgen/testdata/snapshot/simple.arch=amd64,toolchain=go1.24.3.yaml
@@ -1,137 +1,112 @@
 ID: 1
 Probes:
-    - ID: intArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 3}
-      Events:
+    - id: intArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.intArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 3}
+      events:
         - ID: 1
           Type: 53 EventRootType Probe[main.intArg]
           InjectionPoints: [{PC: "0x4a806a", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: stringArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 4}
-      Events:
+    - id: stringArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 4}
+      events:
         - ID: 2
           Type: 54 EventRootType Probe[main.stringArg]
           InjectionPoints: [{PC: "0x4a80ea", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: intSliceArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 5}
-      Events:
+    - id: intSliceArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.intSliceArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 5}
+      events:
         - ID: 3
           Type: 55 EventRootType Probe[main.intSliceArg]
           InjectionPoints: [{PC: "0x4a816a", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: intArrayArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 6}
-      Events:
+    - id: intArrayArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.intArrayArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 6}
+      events:
         - ID: 4
           Type: 56 EventRootType Probe[main.intArrayArg]
           InjectionPoints: [{PC: "0x4a81ea", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: stringSliceArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 7}
-      Events:
+    - id: stringSliceArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringSliceArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 7}
+      events:
         - ID: 5
           Type: 57 EventRootType Probe[main.stringSliceArg]
           InjectionPoints: [{PC: "0x4a826a", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: stringArrayArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 8}
-      Events:
+    - id: stringArrayArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArrayArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 8}
+      events:
         - ID: 6
           Type: 58 EventRootType Probe[main.stringArrayArg]
           InjectionPoints: [{PC: "0x4a82ea", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: intArrayArgFrameless
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 9}
-      Events:
+    - id: intArrayArgFrameless
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.stringArrayArgFrameless}
+      captureSnapshot: true
+      subprogram: {subprogram: 9}
+      events:
         - ID: 7
           Type: 59 EventRootType Probe[main.stringArrayArgFrameless]
           InjectionPoints: [{PC: "0x4a8360", Frameless: true}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: mapArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 10}
-      Events:
+    - id: mapArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.mapArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 10}
+      events:
         - ID: 8
           Type: 60 EventRootType Probe[main.mapArg]
           InjectionPoints: [{PC: "0x4a844a", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: bigMapArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 11}
-      Events:
+    - id: bigMapArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.bigMapArg}
+      captureSnapshot: true
+      subprogram: {subprogram: 11}
+      events:
         - ID: 9
           Type: 61 EventRootType Probe[main.bigMapArg]
           InjectionPoints: [{PC: "0x4a84b3", Frameless: false}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 4.294967295e+09
-    - ID: inlined
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 1}
-      Events:
+    - id: inlined
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.inlined}
+      sampling: {snapshotsPerSecond: 2}
+      captureSnapshot: true
+      subprogram: {subprogram: 1}
+      events:
         - ID: 10
           Type: 62 EventRootType Probe[main.inlined]
           InjectionPoints:
@@ -140,24 +115,21 @@ Probes:
             - PC: "0x4a7dce"
               Frameless: true
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 2
-      PointerChasingLimit: 4.294967295e+09
-    - ID: PointerChainArg
-      Kind: ProbeKindSnapshot
-      Version: 0
-      Tags: []
-      Subprogram: {subprogram: 2}
-      Events:
+    - id: PointerChainArg
+      version: 0
+      type: LOG_PROBE
+      where: {methodName: main.PointerChainArg}
+      capture:
+        maxReferenceDepth: 3
+        maxFieldCount: 0
+        maxCollectionSize: 0
+      captureSnapshot: true
+      subprogram: {subprogram: 2}
+      events:
         - ID: 11
           Type: 63 EventRootType Probe[main.PointerChainArg]
           InjectionPoints: [{PC: "0x4a8006", Frameless: true}]
           Condition: null
-      Snapshot: false
-      ThrottlePeriodMs: 1000
-      ThrottleBudget: 1
-      PointerChasingLimit: 3
 Subprograms:
     - ID: 3
       Name: main.intArg
