--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -319,7 +319,6 @@
 /comp/core/autodiscovery @DataDog/container-platform
 /comp/core/config @DataDog/agent-configuration
 /comp/core/configsync @DataDog/agent-configuration
-/comp/core/filter @DataDog/container-platform
 /comp/core/flare @DataDog/agent-configuration
 /comp/core/gui @DataDog/agent-configuration
 /comp/core/profiler @DataDog/agent-configuration
@@ -328,6 +327,7 @@
 /comp/core/status @DataDog/agent-configuration
 /comp/core/sysprobeconfig @DataDog/ebpf-platform
 /comp/core/tagger @DataDog/container-platform
+/comp/core/workloadfilter @DataDog/container-platform
 /comp/core/workloadmeta @DataDog/container-platform
 /comp/forwarder/eventplatform @DataDog/agent-log-pipelines
 /comp/forwarder/eventplatformreceiver @DataDog/agent-log-pipelines
