--- a/.gitlab/container_build/docker_windows.yml
+++ b/.gitlab/container_build/docker_windows.yml
@@ -41,6 +41,7 @@
       --label 'org.opencontainers.image.created=${BUILD_DATE}'
       --label 'org.opencontainers.image.version=${AGENT_VERSION}'
       --label 'org.opencontainers.image.revision=${CI_COMMIT_SHA}'
+      --squash
       ${BUILD_CONTEXT}"
     - If ($lastExitCode -ne "0") { throw "Previous command returned $lastExitCode" }
     - powershell -Command "$(Get-Location)\tools\ci\retry.ps1 docker push ${TARGET_TAG}"
