--- a/.gitlab/e2e/e2e.yml
+++ b/.gitlab/e2e/e2e.yml
@@ -290,6 +290,7 @@ new-e2e-windows-fips-compliance-test:
     - !reference [.needs_new_e2e_template]
     - qa_agent_fips
     - windows_msi_and_bosh_zip_x64-a7-fips
+    - deploy_windows_testing-a7-fips
   rules:
     - !reference [.on_arun_or_e2e_changes]
     - !reference [.manual]
