--- a/renovate.json
+++ b/renovate.json
@@ -26,12 +26,12 @@
     ],
     "pre-commit": {
       "enabled": true,
-      "fileMatch": [".pre-commit-config.yaml"]
+      "managerFilePatterns": [".pre-commit-config.yaml"]
     },
     "customManagers" : [
       {
         "customType": "regex",
-        "fileMatch": [".gitlab-ci.yml"],
+        "managerFilePatterns": [".gitlab-ci.yml"],
         "matchStrings": [
           "  CI_IMAGE_[^W][^:]*: (?<currentValue>v.*)"
         ],
@@ -41,7 +41,7 @@
       },
       {
         "customType": "regex",
-        "fileMatch": [".gitlab-ci.yml"],
+        "managerFilePatterns": [".gitlab-ci.yml"],
         "matchStrings": [
           "  CI_IMAGE_WIN_[^:]*: (?<currentValue>v.*)"
         ],
@@ -52,7 +52,7 @@
       },
       {
         "customType": "regex",
-        "fileMatch": [".protoc-version"],
+        "managerFilePatterns": [".protoc-version"],
         "matchStrings": [
           "(?<currentValue>[0-9]+.[0-9]+)"
         ],
@@ -61,7 +61,7 @@
       },
       {
         "customType": "regex",
-        "fileMatch": [".dda/version"],
+        "managerFilePatterns": [".dda/version"],
         "matchStrings": [
           "(?<currentValue>[0-9]+.[0-9]+.[0-9]+)"
         ],
@@ -70,7 +70,7 @@
       },
       {
         "customType": "regex",
-        "fileMatch": ["release.json"],
+        "managerFilePatterns": ["release.json"],
         "matchStrings": [
           "[ ]+\"OMNIBUS_RUBY_VERSION\": \"(?<currentDigest>[a-z0-9]+)\""
         ],
@@ -81,7 +81,7 @@
       },
       {
         "customType": "regex",
-        "fileMatch": ["release.json"],
+        "managerFilePatterns": ["release.json"],
         "matchStrings": [
           "[ ]+\"INTEGRATIONS_CORE_VERSION\": \"(?<currentDigest>[a-z0-9]+)\""
         ],
