--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,9 @@ stages:
   - notify
 
 variables:
+  # Special variable that allows us to set the pipeline to compute the code coverage of the e2e tests. It will impact several jobs so that
+  # the agent is build with a special flag that allow computing code coverage of the binary when it is running.
+  E2E_COVERAGE_PIPELINE: false
   # Directory in which we execute the omnibus build.
   # For an unknown reason, it does not go well with
   # a ruby dependency if we build directly into $CI_PROJECT_DIR/.omnibus
@@ -353,6 +356,9 @@ variables:
     - .gitlab/binary_build/fakeintake.yml
     - .gitlab/container_build/fakeintake.yml
     - .gitlab/dev_container_deploy/fakeintake.yml
+
+.if_coverage_pipeline: &if_coverage_pipeline
+  if: $E2E_COVERAGE_PIPELINE == "true"
 
 #
 # Workflow rules
@@ -1092,3 +1098,8 @@ workflow:
       compare_to: $COMPARE_TO_BRANCH
   - when: manual
     allow_failure: true
+
+
+.except_coverage_pipeline:
+  - <<: *if_coverage_pipeline
+    when: never
