--- a/.gitlab/functional_test/static_quality_gate.yml
+++ b/.gitlab/functional_test/static_quality_gate.yml
@@ -1,6 +1,7 @@
 static_quality_gates:
   stage: functional_test
   rules:
+    - !reference [.except_coverage_pipeline] # Coverage pipeline creates a special artifact that will not pass the quality gate
     - !reference [.on_main_or_release_branch]
     - !reference [.on_dev_branches]
     - when: on_success
@@ -102,6 +103,7 @@ debug_static_quality_gates:
 manual_gate_threshold_update:
   stage: functional_test
   rules:
+    - !reference [.except_coverage_pipeline] # Coverage pipeline creates a special artifact that will not pass the quality gate
     - !reference [.on_main_manual]
     - !reference [.on_dev_branches]
     - when: manual
