--- a/pkg/dyninst/actuator/testdata/snapshot/happy_path_multiple_processes.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/happy_path_multiple_processes.yaml
@@ -26,7 +26,7 @@ event: !processes-updated
       probes:
         - {type: LOG_PROBE, id: probe1, where: {methodName: func2}, captureSnapshot: true}
 effects:
-  - !spawn-bpf-loading {executable: /usr/bin/app1@0.0m0.0, probes: [probe1], program_id: 1}
+  - !spawn-bpf-loading {executable: /usr/bin/app1@0.0m0.0, probes: [probe1], process_id: 1001, program_id: 1}
 state:
   currently_loading: <nil> -> 1
   queued_programs: '[] -> [2]'
@@ -40,7 +40,7 @@ state:
 event: !loaded {program_id: 1}
 effects:
   - !attach-to-process {executable: /usr/bin/app1@0.0m0.0, process_id: 1001, program_id: 1}
-  - !spawn-bpf-loading {executable: /usr/bin/app2@0.0m0.0, probes: [probe1], program_id: 2}
+  - !spawn-bpf-loading {executable: /usr/bin/app2@0.0m0.0, probes: [probe1], process_id: 1002, program_id: 2}
 state:
   currently_loading: 1 -> 2
   queued_programs: '[2] -> []'
