--- a/pkg/dyninst/actuator/testdata/snapshot/process_update_changes_probes.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/process_update_changes_probes.yaml
@@ -25,7 +25,7 @@ event: !processes-updated
       probes:
         - {type: LOG_PROBE, id: probe1, where: {methodName: oldFunc}, captureSnapshot: true}
 effects:
-  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 1}
+  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe1], process_id: 1001, program_id: 1}
 state:
   currently_loading: <nil> -> 1
   queued_programs: '[]'
@@ -73,7 +73,7 @@ state:
 event: !detached {program_id: 1, process_id: 1001}
 effects:
   - !close-sink {program_id: 1}
-  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe2], program_id: 2}
+  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe2], process_id: 1001, program_id: 2}
 state:
   currently_loading: <nil> -> 2
   queued_programs: '[]'
