--- a/pkg/dyninst/actuator/testdata/snapshot/shutdown_with_active_programs.yaml
+++ b/pkg/dyninst/actuator/testdata/snapshot/shutdown_with_active_programs.yaml
@@ -37,7 +37,7 @@ event: !processes-updated
       probes:
         - {type: LOG_PROBE, id: probe1, where: {methodName: main}, captureSnapshot: true}
 effects:
-  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe1], program_id: 1}
+  - !spawn-bpf-loading {executable: /usr/bin/test@0.0m0.0, probes: [probe1], process_id: 1001, program_id: 1}
 state:
   currently_loading: <nil> -> 1
   queued_programs: '[]'
@@ -77,7 +77,7 @@ event: !processes-updated
       probes:
         - {type: LOG_PROBE, id: probe2, where: {methodName: main}, captureSnapshot: true}
 effects:
-  - !spawn-bpf-loading {executable: /usr/bin/test2@0.0m0.0, probes: [probe2], program_id: 2}
+  - !spawn-bpf-loading {executable: /usr/bin/test2@0.0m0.0, probes: [probe2], process_id: 1002, program_id: 2}
 state:
   currently_loading: <nil> -> 2
   queued_programs: '[]'
